# ghc-obsidian-generator

./: CHANGELOG.md  README.md  cabal.project  ghc-obsidian.cabal
app/: Main.hs  NewParser.hs  Parser.hs
