cabal-version:      3.4
name:               ghc-obsidian
version:            0.1.0.0
synopsis:
    Tool to generate obsidian vault for GHC notes and documentation

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable ghc-obsidian
    import:           warnings
    main-is:          Main.hs
    other-modules:    Parser
    -- other-extensions:
    build-depends:    base,
                      haddock-api,
                      haskell-src-exts,
                      megaparsec,
                      text,
                      filepattern,
                      directory

    hs-source-dirs:   app
    default-language: GHC2021
